# 0g-tapp

./: CMakeLists.txt  README.md  build.sh
boost/: Makefile
boost/include/: boost.h
boost/src/: boost.c
cmake/: FindTDX.cmake  tdx_tapp.pc.in
doc/: build_configuration.md  build_configuration_zh.md
include/: boost.hpp  key_tool.hpp
rpc/: tapp_service.proto
src/: boost.cpp  cli.cpp  key_tool.cpp  tapp.cpp
tapp-key-tool/: Makefile
tapp-key-tool/include/: key_tool.h
tapp-key-tool/src/: key_tool.c
tests/: test_boost.cpp  test_grpc_service.cpp  test_key_tool.cpp
